# phw-bot

./: .gitignore  CMakeLists.txt
src/: CardWatch.cpp  CardWatch.h  main.cpp
src/python-nw/: docker-compose.yml  main.py
